# TradingCrew

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
cli/: main.py
docs/: Analysts-Ideas.md  CHANGELOG.md  README.md  getting-started.md  troubleshooting.md  user-guide.md
docs/configuration/: api-keys.md  settings.md
docs/features/: cli.md  loop-mode.md  market-scanner.md  trading.md  web-ui.md
electron/: .gitignore  README.md  build.bat  build.sh  entitlements.mac.plist  main.js  package.json  preload.js  renderer.css  renderer.html
electron/assets/: .gitkeep  ICONS_README.md
tests/: test_chat_assistant.py
tests/agents/: __init__.py  test_analyst_tools.py  test_options_trader.py  test_sector_correlation_analyst.py
tests/dataflows/: __init__.py  test_bracket_orders.py  test_earnings_utils.py  test_finnhub_news_online.py  test_news_sources.py  test_options_trading_utils.py  test_portfolio_risk.py  test_positions_data.py  test_reddit_live.py  test_sector_tools.py
tests/scanner/: __init__.py  test_cache.py  test_market_scanner.py  test_movers_fetcher.py  test_news_screener.py  test_options_screener.py  test_scanner_result.py  test_technical_screener.py  test_universe_fetcher.py
tests/webui/: __init__.py  test_chart_auto_load.py  test_chart_enhancements.py  test_chat_callbacks.py  test_history.py  test_local_storage.py  test_options_settings.py  test_orders_panel.py  test_panel_visibility.py  test_pipeline_controls.py  test_pipeline_state.py  test_portfolio_callbacks.py  test_portfolio_panel.py  test_portfolio_panel_settings.py  test_positions_panel.py  test_risk_guardrail_settings.py  test_run_watchlist.py  test_run_watchlist_callbacks.py  test_state_reports.py  test_symbol_select.py  test_thread_local_symbol.py  test_ticker_progress_panel.py
tradingagents/: __init__.py  chat_assistant.py  default_config.py
tradingagents/agents/: __init__.py  scanner_agent.py
tradingagents/dataflows/: __init__.py  alpaca_utils.py  coindesk_utils.py  config.py  defillama_utils.py  earnings_utils.py  external_data_logger.py  finnhub_utils.py  googlenews_utils.py  interface.py  macro_utils.py  options_trading_utils.py  options_utils.py  portfolio_risk.py  reddit_live.py  reddit_utils.py  sector_utils.py  stockstats_utils.py  yfin_utils.py
tradingagents/graph/: conditional_logic.py  propagation.py  setup.py  trading_graph.py
tradingagents/scanner/: __init__.py  cache.py  market_scanner.py  movers_fetcher.py  news_screener.py  options_screener.py  scanner_result.py  technical_screener.py  universe_fetcher.py
webui/: __init__.py  app_dash.py  layout.py
webui/assets/: chat_resize.js  custom.css  tradingview_chart.js  watchlist_dragdrop.js
webui/callbacks/: __init__.py  chart_callbacks.py  chat_callbacks.py  collapse_callbacks.py  control_callbacks.py  history_callbacks.py  log_callbacks.py  panel_visibility_callbacks.py  portfolio_callbacks.py  report_callbacks.py  scanner_callbacks.py  status_callbacks.py  storage_callbacks.py  system_settings_callbacks.py  theme_callbacks.py  ticker_progress_callbacks.py  trading_callbacks.py  ux_callbacks.py  watchlist_callbacks.py
webui/components/: __init__.py  alpaca_account.py  analysis.py  chart_panel.py  chat_drawer.py  config_panel.py  (+10 more)
(+35 files in other folders)
