[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingcrew"
version = "0.4.1"
description = "TradingCrew - Multi-Agent LLM Financial Trading Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "TradingAgents Team", email = "yijia.xiao@cs.ucla.edu"},
]
keywords = [
    "trading",
    "finance",
    "llm",
    "agents",
    "alpaca",
    "stocks",
    "crypto",
    "ai",
    "langchain",
    "langgraph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typing-extensions>=4.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-experimental>=0.0.40",
    "langgraph>=0.0.20",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "praw>=7.7.0",
    "feedparser>=6.0.0",
    "stockstats>=0.5.4",
    "finnhub-python>=2.4.0",
    "parsel>=1.8.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "questionary>=2.0.1",
    "plotly>=5.18.0",
    "dash>=3.0.0",
    "dash-bootstrap-components>=2.0.0",
    "flask>=3.0.0",
    "alpaca-py>=0.8.2",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
extras = [
    "redis>=4.5.0",
    "chainlit>=0.7.0",
    "backtrader>=1.9.0",
    "chromadb>=0.4.0",
    "gradio>=4.0.0",
]
all = [
    "tradingcrew[dev,extras]",
]

[project.scripts]
tradingcrew = "cli.main:main"
tradingcrew-web = "webui:main"

[project.urls]
Homepage = "https://github.com/rminchev1/TradingCrew"
Repository = "https://github.com/rminchev1/TradingCrew"
Documentation = "https://github.com/rminchev1/TradingCrew#readme"
Issues = "https://github.com/rminchev1/TradingCrew/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tradingagents*", "webui*", "cli*"]
exclude = ["analysis_history*", "data*", "*.db"]

[tool.setuptools.package-data]
webui = ["assets/*", "assets/**/*"]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
